# smash-coach

./: .gitignore  ONBOARDING.md  README.md  RUNBOOK.md  pyproject.toml
data/: action_vocab.json  frame_data.json  hitboxes.json  labels_track.json  ops_config.json  ui_regions.json
docs/superpowers/plans/: 2026-06-19-smash-coach.md
docs/superpowers/specs/: 2026-06-19-smash-coach-design.md
mac/: capture.py  dashboard.py  digit_match.py  dispatcher.py  frame_data.py  hud.py  label_track.py  main.py  onset.py  ops.py  ops_dashboard.py  rewind_card.py  scorer.py  smoother.py  state.py  system2_client.py  tier0_ocr.py  tier1_cv.py  trigger.py
scripts/: bench_s1.py  capture_corpus.sh  check_capture.sh  cost_start.sh  cost_stop.sh  dry_run.sh  extract_digit_templates.py  extract_eight.py  pod_down.sh  pod_up.sh  precompute_labels.py  preflight.sh  preview.sh  record_raw.sh  run_demo.sh  run_live_s1.sh  run_ops_agent_local.sh  run_ops_dashboard.sh  run_playback.sh  run_stub.sh  scrape_frame_data.py  smoke_capture.py  smoke_cv.py  smoke_dashboard.py  smoke_digit_match.py  smoke_ocr.py  smoke_ops_agent.py  smoke_system1.py  smoke_system2.py  smoke_system2_client.py  smoke_system2_render.py
server/: launch_ops_agent.sh  launch_system1.sh  launch_system2.sh  ops_agent.py  stub_server.py  system1_server.py  system2_server.py
server/prompts/: system1.py  system2.py
tests/: test_capture.py  test_frame_data.py  test_label_track.py  test_onset.py  test_prompts_schema.py  test_scorer.py  test_state.py  test_trigger.py
