[project]
name = "smash-coach"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "opencv-python==4.10.0.84",
  "numpy>=1.26",
  "pydantic>=2.7",
  "websockets>=12.0",
  "httpx>=0.27",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "beautifulsoup4>=4.12",
  "requests>=2.32",
  "pytesseract>=0.3.10",
  "pillow>=10.3",
  "jsonschema>=4.21",
  "streamlit>=1.58.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
server = ["vllm>=0.6.0", "sglang>=0.3.0"]
mac = ["pygame>=2.5"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
